--- a/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
@@ -90,8 +90,8 @@
               <nz-form-item  nzFlex>
                 <nz-form-control> 
                   <nz-select class="inputMedium" formControlName="tipo" nzPlaceHolder="Baja tension, media, alta" nzAllowClear>
-                        <nz-option nzLabel="Unidireccional" [nzValue]="0"></nz-option>
-                        <nz-option nzLabel="Bidireccional" [nzValue]="1"></nz-option>
+                        <nz-option nzLabel="Unidireccional" [nzValue]="false"></nz-option>
+                        <nz-option nzLabel="Bidireccional" [nzValue]="true"></nz-option>
                   </nz-select>
                 </nz-form-control>
               </nz-form-item>
