--- a/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
+++ b/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="!FacturaIsVisible">
   <div nz-row class="row-2">
   <div nz-col>
-      <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
+      <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{   x: '100%', y: '385px' }"  [nzPageSize]="10">
         <thead>
           <tr>
           <th nzLeft nzWidth="90px" nzAlign="center">Acciones</th>
